RESOLVED FIXED31717
[GTK] DRT release event does not create the state correctly
https://bugs.webkit.org/show_bug.cgi?id=31717
Summary [GTK] DRT release event does not create the state correctly
Alejandro G. Castro
Reported 2009-11-20 04:14:15 PST
The release events we synthesize in the DRT do not consider the state of the mouse, it is more correct to add the same state we add to the motion events. Apparently this is not causing any problem though.
Attachments
Proposed patch, adds state info to release events (2.74 KB, patch)
2009-11-20 05:06 PST, Alejandro G. Castro
no flags
Alejandro G. Castro
Comment 1 2009-11-20 05:06:02 PST
Created attachment 43572 [details] Proposed patch, adds state info to release events
Xan Lopez
Comment 2 2009-11-20 05:12:16 PST
Comment on attachment 43572 [details] Proposed patch, adds state info to release events LGTM.
WebKit Commit Bot
Comment 3 2009-11-20 05:18:01 PST
Comment on attachment 43572 [details] Proposed patch, adds state info to release events Rejecting patch 43572 from commit-queue. Unexpected failure when landing patch! Please file a bug against bugzilla-tool. Failed to run "['WebKitTools/Scripts/bugzilla-tool', 'land-attachment', '--force-clean', '--non-interactive', '--quiet', '43572']" exit_code: 1 Last 500 characters of output: ingsequence.py", line 49, in run self.test() File "/Users/eseidel/Projects/CommitQueue/WebKitTools/Scripts/modules/landingsequence.py", line 113, in test LandingSequence.test(self) File "/Users/eseidel/Projects/CommitQueue/WebKitTools/Scripts/modules/landingsequence.py", line 81, in test WebKitScripts.run_webkit_tests(launch_safari=not options.non_interactive, fail_fast=options.non_interactive, quiet=options.quiet, port=port) NameError: global name 'WebKitScripts' is not defined
Xan Lopez
Comment 4 2009-11-20 09:36:15 PST
Comment on attachment 43572 [details] Proposed patch, adds state info to release events Let's try again...
WebKit Commit Bot
Comment 5 2009-11-20 09:45:38 PST
Comment on attachment 43572 [details] Proposed patch, adds state info to release events Clearing flags on attachment: 43572 Committed r51239: <http://trac.webkit.org/changeset/51239>
WebKit Commit Bot
Comment 6 2009-11-20 09:45:42 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.