2009-11-20  Alejandro G. Castro  <alex@igalia.com>

Reviewed by Xan Lopez.

        [GTK] DRT release event does not create the state correctly
        https://bugs.webkit.org/show_bug.cgi?id=31717

        * WebKitTools/DumpRenderTree/gtk/EventSender.cpp:

Canonical link: https://commits.webkit.org/42668@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51239 268f45cc-cd09-0410-ab3c-d52691b4dbfc